public/stylesheets/base.less
@import "./node_modules/bootstrap/less/bootstrap.less";

@import "clock";

#invigilator {
    display: none;
}

/*****************************************************************/
/* Use mathjax fonts for body text... or not, since it is so ugly. */

/*
@font-face {
  font-family: 'MJX_Main';
  src: url('http://cdn.mathjax.org/mathjax/latest/fonts/HTML-CSS/TeX/eot/MathJax_Main-Regular.eot'); 
  src: url('http://cdn.mathjax.org/mathjax/latest/fonts/HTML-CSS/TeX/eot/MathJax_Main-Regular.eot?iefix') format('eot'),
       url('http://cdn.mathjax.org/mathjax/latest/fonts/HTML-CSS/TeX/woff/MathJax_Main-Regular.woff')  format('woff'),
       url('http://cdn.mathjax.org/mathjax/latest/fonts/HTML-CSS/TeX/otf/MathJax_Main-Regular.otf')  format('opentype'),
       url('http://cdn.mathjax.org/mathjax/latest/fonts/HTML-CSS/TeX/svg/MathJax_Main-Regular.svg#MathJax_Main-Regular') format('svg');
}

.activity p {
  font-family: MJX_Main;
  font-size: 110%;
}

.activity input {
  font-family: @font-family-sans-serif;
}

.activity input, .activity .popover {
  font-family: @font-family-sans-serif;
}

.activity .multiple-choice .btn-group-vertical {
  font-family: MJX_Main;
}
*/

/*****************************************************************/
/* heartbeat to attract the eye to changing values */

.heartbeat
{
     transition:opacity 1s linear;
}

@keyframes pulse {
    0% { box-shadow: 0 0 14px rgba(0,0,0,0); }
    50% { box-shadow: 0 0 14px rgba(0,0,0,0.5); }
    100% { box-shadow: 0 0 14px rgba(0,0,0,0);} 
}

.pager .pulse a {
    -webkit-animation: pulse 1.5s infinite ease-in-out;
    animation: pulse 1.5s infinite ease-in-out;
}

/****************************************************************/
/* popovers */

.marginalia .popover {   
    position: relative;
    display: block;
    /*width: 260px;*/
    width: 100%;
    //margin: 20px;
}

/*****************************************************************/
/* course navigation bar */

@keyframes opacity_sequence {
  from { opacity:0; }
  to { opacity:1; }
}

.course-navigation .ng-enter {
  animation: opacity_sequence 0.15s ease-in;
}

.course-navigation ul
{
  list-style-type:none;
  margin: 0;
  padding: 0;
  color: #555;
}

.course-navigation li > div > .description:hover {
  color: black;
}

.course-navigation li > div > .description:hover a {
  text-decoration: underline;
  color: @link-hover-color;
}

.course-navigation ul li > div > .description
{
  margin-left: 2px;
}

.course-navigation ul li.active-ancestor > div > .description
{
  margin-left: 1px;
  border-left: 1px solid black;
}

.course-navigation ul li.active > div > .description
{
  margin-left: 0;
  border-left: 2px solid black;
}

.course-navigation li > div > .description:hover,
.course-navigation li.active > div > .description:hover,
.course-navigation li.active-ancestor > div > .description:hover,
{
  border-left: 2px solid black;
  margin-left: 0;
  transition: border-color 0.12s ease-in;
}

.course-navigation ul li {
  margin-left: 1px solid blue;
}

.course-navigation ul li > div > .description
{
  padding-left: 0.75em;
}

.course-navigation ul li ul li > div > .description
{
  padding-left: 1.5em;
}

.course-navigation ul li ul li ul li > div > .description
{
  padding-left: 2.25em;
}

.course-navigation ul li ul li ul li ul li > div > .description
{
  padding-left: 3.0em;
}

.course-navigation ul li ul li ul li ul li ul li > div > .description
{
  padding-left: 3.75em;
}

.course-navigation ul li ul li ul li ul li ul li ul li > div > .description
{
  padding-left: 4.5em;
}

.course-navigation li.active > div > .description a
{
  font-weight: bold;
}

.course-navigation .completion-symbol {
    color: #AAA;
}

.course-navigation .completion-symbol .fa-check-circle {
    color: @brand-success;
    transition: color 0.15s ease-in;
}

.course-navigation .completion-symbol .fa-dot-circle-o {
    color: @brand-warning;
    transition: color 0.15s ease-in;
}

.course-navigation .completion-symbol .fa-circle-o {
    color: @brand-danger;
    transition: color 0.15s ease-in;
}


// TODO: Fix?
.form-inline {
  margin-bottom:-0.8em;
}

.form-inline .input-group input {
    min-width:8em;
}

.question.ng-hide-add, .question.ng-hide-remove {
  -webkit-transition:all linear 0.5s;
  -moz-transition:all linear 0.5s;
  -o-transition:all linear 0.5s;
  transition:all linear 0.5s;
  display:block!important;
}

.question.ng-hide-add.ng-hide-add-active,
.question.ng-hide-remove {
  opacity:0;
}
 
.question.ng-hide-add,
.question.ng-hide-remove.ng-hide-remove-active {
  opacity:1;
}
/* ... */

